--- a/index.html
+++ b/index.html
@@ -1,1 +1,90 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Lekhika Sriwal - Resume</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+</head>
+<body>
+    <div class="wraper">
+        <div class="container">
+            <div class="left-content p-30">
+                <div class="logo">
+                    <a href="index.html">
+                        <span>Lekhika</span>
+                        <span>Sriwal</span>
+                    </a>
+                </div>
+                <div class="nav">
+                    <ul>
+                        <li><a href="#Home">Home</a></li>
+                        <li><a href="#About">About</a></li>
+                        <li><a href="#Work">Work Profile</a></li>
+                        <li><a href="#Portfolio">Portfolio</a></li>
+                        <li><a href="#Education">Education</a></li>
+                        <li><a href="#Contact">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="left-footer">
+                    <div class="social-icons">
+                        <ul>
+                            <li><a href="https://linkedin.com/in/lekhikasriwal"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                            <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                            <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="foot-contact">
+                        <ul>
+                            <li>lekhika.sriwal@example.com</li>
+                            <li>+1 917-XXX-XXXX</li>
+                        </ul>
+                    </div>
+                    <div class="copy-rights">Copyright &copy;2025 All rights reserved</div>
+                </div>
+            </div>
+
+            <div class="main-content">
+                <div class="section1 p-30" id="Home">
+                    <div class="sec-title">
+                        <div class="pg-sub-title">Home</div>
+                        <div class="pg-title">My Profile</div>
+                    </div>
+                    <div class="d-flex-align-center">
+                        <div class="user-img flex-1"><img src="img/lekhika.jpg" alt="Lekhika Sriwal"></div>
+                        <div class="user-profile flex-1">
+                            <div class="pro-details">
+                                <div class="sm-text">HELLO EVERYBODY, I AM</div>
+                                <div class="name">Lekhika Sriwal</div>
+                                <div class="role">Registered Nurse & Public Health Specialist</div>
+                            </div>
+                            <div class="text">
+                                Passionate healthcare professional with a background in nursing and a Master of Public Health. Dedicated to improving healthcare accessibility and community well-being.
+                            </div>
+                            <div class="pr-list">
+                                <ul>
+                                    <li><i class="fa fa-calendar" aria-hidden="true"></i> Date of Birth: XX-XX-XXXX</li>
+                                    <li><i class="fa fa-phone" aria-hidden="true"></i> +1 917-XXX-XXXX</li>
+                                    <li><i class="fa fa-envelope" aria-hidden="true"></i> lekhika.sriwal@example.com</li>
+                                    <li><i class="fa fa-map-marker" aria-hidden="true"></i> New York, USA</li>
+                                </ul>
+                            </div>
+                            <div class="social-icons-head">
+                                <ul>
+                                    <li><a href="https://linkedin.com/in/lekhikasriwal"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Add additional sections for Work, Education, Contact, etc. -->
+            </div>
+        </div>
+    </div>
+</body>
+</html>
 
