--- a/index.html
+++ b/index.html
@@ -1,90 +1,63 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lekhika Sriwal - Resume</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic|Open+Sans:300,400,500,700|Waiting+for+the+Sunrise|Shadows+Into+Light' rel='stylesheet' type='text/css'>
 </head>
 <body>
-    <div class="wraper">
-        <div class="container">
-            <div class="left-content p-30">
-                <div class="logo">
-                    <a href="index.html">
-                        <span>Lekhika</span>
-                        <span>Sriwal</span>
-                    </a>
-                </div>
-                <div class="nav">
-                    <ul>
-                        <li><a href="#Home">Home</a></li>
-                        <li><a href="#About">About</a></li>
-                        <li><a href="#Work">Work Profile</a></li>
-                        <li><a href="#Portfolio">Portfolio</a></li>
-                        <li><a href="#Education">Education</a></li>
-                        <li><a href="#Contact">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="left-footer">
-                    <div class="social-icons">
-                        <ul>
-                            <li><a href="https://linkedin.com/in/lekhikasriwal"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                        </ul>
-                    </div>
-                    <div class="foot-contact">
-                        <ul>
-                            <li>lekhika.sriwal@example.com</li>
-                            <li>+1 917-XXX-XXXX</li>
-                        </ul>
-                    </div>
-                    <div class="copy-rights">Copyright &copy;2025 All rights reserved</div>
+    <div class="wrapper clearfix">
+        <div class="left">
+            <div class="name-hero">
+                <div class="me-img"></div>
+                <div class="name-text">
+                    <h1>Lekhika <em>Sriwal</em></h1>
+                    <p>(475)-414-5797</p>
+                    <p>lekhikasriwal2211@gmail.com</p>
+                    <p>
+                        <a href="https://www.linkedin.com/in/lekhika-sriwal-267a2533a" target="_blank">
+                            <img src="linkedin-icon.png" alt="LinkedIn" width="20px"> LinkedIn
+                        </a>
+                    </p>
+                    <p>
+                        <a href="https://www.instagram.com/lekhika_sriwal?igsh=aWljcWhnMmN1djFk" target="_blank">
+                            <img src="instagram-icon.png" alt="Instagram" width="20px"> Instagram
+                        </a>
+                    </p>
+                    <p>
+                        <a href="https://www.facebook.com/share/1BWdEpgoMk/?mibextid=wwXIfr" target="_blank">
+                            <img src="facebook-icon.png" alt="Facebook" width="20px"> Facebook
+                        </a>
+                    </p>
                 </div>
             </div>
-
-            <div class="main-content">
-                <div class="section1 p-30" id="Home">
-                    <div class="sec-title">
-                        <div class="pg-sub-title">Home</div>
-                        <div class="pg-title">My Profile</div>
-                    </div>
-                    <div class="d-flex-align-center">
-                        <div class="user-img flex-1"><img src="img/lekhika.jpg" alt="Lekhika Sriwal"></div>
-                        <div class="user-profile flex-1">
-                            <div class="pro-details">
-                                <div class="sm-text">HELLO EVERYBODY, I AM</div>
-                                <div class="name">Lekhika Sriwal</div>
-                                <div class="role">Registered Nurse & Public Health Specialist</div>
-                            </div>
-                            <div class="text">
-                                Passionate healthcare professional with a background in nursing and a Master of Public Health. Dedicated to improving healthcare accessibility and community well-being.
-                            </div>
-                            <div class="pr-list">
-                                <ul>
-                                    <li><i class="fa fa-calendar" aria-hidden="true"></i> Date of Birth: XX-XX-XXXX</li>
-                                    <li><i class="fa fa-phone" aria-hidden="true"></i> +1 917-XXX-XXXX</li>
-                                    <li><i class="fa fa-envelope" aria-hidden="true"></i> lekhika.sriwal@example.com</li>
-                                    <li><i class="fa fa-map-marker" aria-hidden="true"></i> New York, USA</li>
-                                </ul>
-                            </div>
-                            <div class="social-icons-head">
-                                <ul>
-                                    <li><a href="https://linkedin.com/in/lekhikasriwal"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Add additional sections for Work, Education, Contact, etc. -->
+        </div>
+        <div class="right">
+            <div class="inner">
+                <section>
+                    <h1>Summary</h1>
+                    <p>Dedicated and compassionate licensed nurse with hands-on experience gained through internships, providing high-quality patient care in diverse healthcare settings.</p>
+                </section>
+                <section>
+                    <h1>Education</h1>
+                    <p>University of New Haven, West Haven, CT - <em>Master of Science, Public Health (May 2025)</em></p>
+                    <p>Chitkara University, Punjab - <em>Bachelor of Science, Nursing (April 2023)</em></p>
+                </section>
+                <section>
+                    <h1>Internship Experience</h1>
+                    <p>Government Multi-Specialty Hospital, Chandigarh, Punjab - <em>Nurse Intern (Feb 2022)</em></p>
+                    <p>A.P. Jain Civil Hospital, Rajpura, Punjab - <em>Nurse Intern (Sept 2022)</em></p>
+                </section>
+                <section>
+                    <h1>Licensure & Certification</h1>
+                    <p>Registered Professional Nurse - New York (Aug 2024)</p>
+                    <p>Registered Professional Nurse - India (Dec 2022)</p>
+                    <p>Middle-Level Health Provider - India (Dec 2022)</p>
+                </section>
             </div>
         </div>
     </div>
 </body>
 </html>
-
