--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 </head>
 <body>
 
-    <header>
+    <header class="fade-in">
         <div class="container">
             <div class="profile">
                 <img src="images/profile.jpg" alt="Parth Kanojia">
-                <h1>Parth <em>Kanojia</em></h1>
+                <h1 class="animate-text">Parth <em>Kanojia</em></h1>
                 <p><i class="fas fa-map-marker-alt"></i> West Haven, CT, USA</p>
                 <p><i class="fas fa-envelope"></i> <a href="mailto:pkanojiy@nyit.edu">pkanojiy@nyit.edu</a></p>
                 <p><i class="fas fa-phone"></i> <a href="tel:2035897021">203-589-7021</a></p>
@@ -48,16 +48,16 @@
 
     <main>
         <div class="container">
-            <section id="employment">
-                <h2>Employment</h2>
+            <section id="employment" class="fade-in">
+                <h2 class="animate-text">Employment</h2>
                 <p><strong>2022 - Present</strong> <em>Freelance UX/UI Designer</em></p>
                 <p>Specialized in UX/UI design, graphic design, branding, motion graphics, and 3D architecture.</p>
                 <p><strong>2020 - 2022</strong> <em>Radical One | VFX & Graphic Designer</em></p>
                 <p>Worked on high-end VFX projects, branding, and digital illustrations for films and advertisements.</p>
             </section>
 
-            <section id="skills">
-                <h2>Technical Skills</h2>
+            <section id="skills" class="fade-in">
+                <h2 class="animate-text">Technical Skills</h2>
                 <ul class="skill-set">
                     <li>UX/UI Design</li>
                     <li>Graphic Design</li>
@@ -66,16 +66,6 @@
                     <li>Adobe Photoshop & After Effects</li>
                     <li>HTML, CSS, JavaScript</li>
                     <li>Figma & Sketch</li>
-                </ul>
-            </section>
-
-            <section id="certifications">
-                <h2>Certifications</h2>
-                <ul class="skill-set">
-                    <li>Google UX Design Professional Certificate</li>
-                    <li>Adobe Certified Expert - Photoshop</li>
-                    <li>Unity 3D Certified Designer</li>
-                    <li>Advanced Motion Graphics & VFX Certification</li>
                 </ul>
             </section>
         </div>
